fix: header text contrast aspect ratio

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -7,12 +7,15 @@
   max-width: 120rem;
   padding: 0 1.5rem;
   margin: 1.5rem auto 0;
-  color: $accent-1;
+  color: $accent-3;
   position: relative;
   @include z-index(header);
 
   @media screen and (min-width: 768px) {
     margin-top: 5rem;
+  }
+  &--homepage {
+    color: $accent-1;
   }
 
   h1 {
